[project]
name = "test-project"
version = "0.2.6"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Frank Aragclear" }
]
requires-python = ">=3.10"
dependencies = [
    "polars>=1.24.0",
]

[project.scripts]
test-project = "test_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
